--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <packaging>jar</packaging>
   <version>1.0.0-SNAPSHOT</version>
   <name>s2test</name>
-  <description>junit4.11以降を使用するためのテスト支援ユーティリティプロジェクトです</description>
+  <description>junit4.10以降を使用するためのテスト支援ユーティリティプロジェクトです</description>
   <inceptionYear>2012</inceptionYear>
   <repositories>
     <repository>
@@ -73,7 +73,7 @@
     <dependency>
     	<groupId>junit</groupId>
     	<artifactId>junit</artifactId>
-    	<version>4.11</version>
+    	<version>[4.10,)</version>
     </dependency>
   </dependencies>
 </project>
