--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,10 @@
     	<artifactId>junit</artifactId>
     	<version>[4.10,)</version>
     </dependency>
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-all</artifactId>
+    	<version>1.9.5</version>
+    </dependency>
   </dependencies>
 </project>
